@@ -8,11 +8,12 @@ import net.minecraft.resources.ResourceLocation;
 import net.minecraft.server.level.ServerLevel;
 import net.minecraft.server.level.ServerPlayer;
 import net.minecraft.util.Mth;
-import net.minecraft.world.WorldlyContainer;
 import net.minecraft.world.entity.ExperienceOrb;
 import net.minecraft.world.item.ItemStack;
 import net.minecraft.world.item.crafting.AbstractCookingRecipe;
-import net.minecraft.world.item.crafting.Recipe;
+import net.minecraft.world.item.crafting.RecipeHolder;
+import net.minecraft.world.item.crafting.SingleRecipeInput;
+import net.minecraft.world.level.block.entity.AbstractFurnaceBlockEntity;
 import net.minecraft.world.phys.Vec3;
 
 import javax.annotation.Nullable;
@@ -22,27 +23,32 @@ public final class MPGLogicHelper {
     private MPGLogicHelper() {
     }
 
-    public static boolean canBurn(RegistryAccess registryAccess, @Nullable Recipe<?> recipe, NonNullList<ItemStack> items, WorldlyContainer container) {
-        if (items.get(0).isEmpty() || recipe == null) {
+    public static boolean canBurn(RegistryAccess registryAccess, @Nullable RecipeHolder<?> recipe, NonNullList<ItemStack> items, int maxStackSize, AbstractFurnaceBlockEntity furnace) {
+        if (items.getFirst().isEmpty() || recipe == null) {
             return false;
         }
-        ItemStack assembled = assembleResult(recipe, container, registryAccess);
+        ItemStack assembled = assembleResult(recipe, furnace.getItem(0), registryAccess);
         if (assembled.isEmpty()) {
             return false;
         }
         ItemStack output = items.get(2);
-        return output.isEmpty() || ItemStack.isSameItem(output, assembled);
+        if (output.isEmpty()) {
+            return true;
+        }
+        if (!ItemStack.isSameItemSameComponents(output, assembled)) {
+            return false;
+        }
+        return output.getCount() + assembled.getCount() <= maxStackSize && output.getCount() + assembled.getCount() <= output.getMaxStackSize();
     }
 
-    @SuppressWarnings("unchecked")
-    public static ItemStack assembleResult(Recipe<?> recipe, WorldlyContainer container, RegistryAccess registryAccess) {
-        return ((Recipe<WorldlyContainer>) recipe).assemble(container, registryAccess);
+    public static ItemStack assembleResult(RecipeHolder<?> recipe, ItemStack input, RegistryAccess registryAccess) {
+        return ((RecipeHolder<? extends AbstractCookingRecipe>) recipe).value().assemble(new SingleRecipeInput(input), registryAccess);
     }
 
     public static void awardUsedRecipesAndPopExperience(ServerPlayer player, NonNullList<ItemStack> items, Object2IntMap<ResourceLocation> recipesUsed) {
-        List<Recipe<?>> recipes = getRecipesToAwardAndPopExperience(player.serverLevel(), player.position(), recipesUsed);
+        List<RecipeHolder<?>> recipes = getRecipesToAwardAndPopExperience(player.serverLevel(), player.position(), recipesUsed);
         player.awardRecipes(recipes);
-        for (Recipe<?> recipe : recipes) {
+        for (RecipeHolder<?> recipe : recipes) {
             if (recipe != null) {
                 player.triggerRecipeCrafted(recipe, items);
             }
@@ -50,12 +56,12 @@ public final class MPGLogicHelper {
         recipesUsed.clear();
     }
 
-    public static List<Recipe<?>> getRecipesToAwardAndPopExperience(ServerLevel level, Vec3 pos, Object2IntMap<ResourceLocation> recipesUsed) {
-        List<Recipe<?>> recipes = Lists.newArrayList();
+    public static List<RecipeHolder<?>> getRecipesToAwardAndPopExperience(ServerLevel level, Vec3 pos, Object2IntMap<ResourceLocation> recipesUsed) {
+        List<RecipeHolder<?>> recipes = Lists.newArrayList();
         for (Object2IntMap.Entry<ResourceLocation> entry : recipesUsed.object2IntEntrySet()) {
             level.getRecipeManager().byKey(entry.getKey()).ifPresent(recipe -> {
                 recipes.add(recipe);
-                createExperience(level, pos, entry.getIntValue(), ((AbstractCookingRecipe) recipe).getExperience());
+                createExperience(level, pos, entry.getIntValue(), ((AbstractCookingRecipe) recipe.value()).getExperience());
             });
         }
         return recipes;
